--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,3 +2,8 @@
     "python-envs.defaultEnvManager": "ms-python.python:system",
     "python-envs.pythonProjects": []
 }
+{
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": [],
+  "editor.formatOnSave": true
+}
